# hagento

./: .gitignore  hagento.cabal  stack.yaml
app/: Main.hs
src/: Args.hs  Filesystem.hs  Lib.hs  Magento.hs  Xml.hs
src/Magento/: Module.hs
test/: MagentoTest.hs  Spec.hs  Tasty.hs
