name:                hagento
version:             0.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dxtr/hagento#readme
license:             ISC
license-file:        LICENSE
author:              Kim Lidström
maintainer:          kim@dxtr.im
copyright:           2016 Kim Lidström
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Args
                     , Xml
                     , Magento
  build-depends:       base >= 4.7 && < 5
                     , text
                     , conduit
                     , conduit-combinators
                     , hxt
                     , optparse-applicative
                     , esqueleto
                     , filepath
                     , split
                     , safe
  default-language:    Haskell2010

executable hagento
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , hagento
  default-language:    Haskell2010

test-suite hagento-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tasty.hs
  other-modules:
    MagentoTest
  build-depends:       base
                     , hagento
                     , tasty
                     , tasty-hspec
                     , tasty-hunit
                     , filepath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dxtr/hagento
